# Edda

./: CONTRIBUTING  Cargo.toml  README.md  TODO.md
.github/workflows/: edda-ci-pr.yml  edda-ci-push.yml  edda-ci.yaml  edda-ci.yml
edda_core/: Cargo.toml
edda_core/src/: lib.rs
edda_core/src/filemgr/: document.rs
edda_core/src/stylemgr/: mod.rs  structural.rs  style.rs  text.rs
filemgr/: Cargo.toml
filemgr/src/: document.rs  lib.rs  styling.rs
gui_utilities/: Cargo.toml
gui_utilities/src/: lib.rs
gui_utilities/src/logs/: mod.rs
gui_utilities/src/pop_ups/: mod.rs
src/: main.rs
src/assets/: gtk.css
src/editor_builders/: toolbars.rs
src/menus/file/: external.rs
